# Flask_ChatGpt_OpenAI

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
CodePilot/: CodePilotController.py  CodePilotGateWay.py  CodePilotService.py  ResponseParser.py
tests/: test_CodePilotControllerShould.py  test_CodePilotServiceShould.py  test_CodePilotShould.py
