[tool.poetry]
name = "codepilot"
version = "0.1.0"
description = ""
authors = ["Tanuja Mehra <tanuja@incubyte.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
flask-unittest = "^0.1.3"
fluentcheck = "^0.2.0"
requests = "^2.28.2"
openai = "^0.27.2"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
